Add mobile responsiveness for grids

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h1>Library</h1>
-
+        <button class="open-new-book">Add Book</button>
         <div class="new-book-modal">
             <div class="new-book-inputs">
                 <span class="close-modal">x</span>
